# rifp

./: .clang-format  CMakeLists.txt  README.md  test.cpp
arduino/: README.md
arduino/example/: compile-upload.sh  example.ino
arduino/lightsOff/: compile-upload.sh  lightsOff.ino
arduino/lightsShow/: compile-upload.sh  lightsShow.ino
include/: README.md  utils.hpp
include/detection/: ball.hpp  table.hpp
include/modules/: cam_fps_module.hpp  drawing_overlays_module.hpp  gstreamer_pipelines_module.hpp  mjpeg_streamer_module.hpp
src/: README.md  main.cpp
src/detection/: ball.cpp  players.cpp  table.cpp
